SD, the Multivalue String Database

Change Log:
-----------------------

Version 0.6.4

(dsm) Removed MED from GPL.BP, GPL.BP.OUT, gcat, NEWVOC & VOC
      Moved GPL.BP/MED source code to Depreciated
(dsm) Removed SED from GPL.BP, GPL.BP.OUT, gcat, NEWVOC & VOC
      Moved GPL.BP/SED source code to Depreciated
(dsm) Removed SCRB from GPL.BP, GPL.BP.OUT, gcat, NEWVOC & VOC
      Moved GPL.BP/SCRB source code to Depreciated
(dsm) Removed SCREEN$STOP.SCR from GPL.BP
(dsm) Removed SCREEN from GPL.BP and BPL.BP.OUT
      Moved GPL.BP/SCREEN source code to Depreciated
(dsm) Removed ADMUSER/ADMIN.USER from GPL.BP, GPL.BP.OUT, gcat, NEWVOC & VOC
      Moved GPL.BP/ADMUSER source code to Depreciated
      Removed GPL.BP/$ADMUSER.SCR
(dsm) Removed files $FORMS, $SCREENS, $SCREENS.DIC, ERRMSG, ERRMSG.DIC
      Remove ERRMSG in VOC and NEWVOC 
(dsm) Remove GPL.BP SP.ASSIGN & SET.QUEUE progrrams from GPL.BP, GPL.BP.OUT, gcat, NEWVOC & VOC
      Move GPL.BP/SP.ASSIGN and SET.QUEUE to Depreceiated
(dsm) Delete all records in MESSAGES starting with PL (Polish)


Version 0.6.3
-----------------------
(mab) mods date tagged in source as 20240219 and 20240225 mab 
    Remove the ability to run the system in "insecure mode".
    Remove SECURITY program from GPL.BP and $secure from  gcat 
    Do not allow kernel(K$SECURE, >=0) to reset security flag. 
    
    VM - Add CHOWN function to OSPATH.
         Example:   CALL ospath(chown_parm,OS$CHOWN)
         where chown_parm is a VM separated string <owner_name> VM <group_name> VM <file_path>
         Note in version 2.6.6 OSPATH is an internal function (requires -internal at login to compile).
         Also for most OS$CHOWN operations to work, user will need to be root.

    GPL.BP/LOGIN
      No longer allow NETWORK or SERIAL connections.
      Always run in secure mode.
      Do not auto create missing user account.