@@ -18,6 +18,7 @@
 * 
 * 
 * START-HISTORY:
+* 20240330 mab permission to use verb is restricted to root (system(27) = 0)
 * 19 Jan 04  0.6.1 SD launch. Earlier history details suppressed.
 * END-HISTORY
 *
@@ -44,8 +45,8 @@ $include err.h
 
    @system.return.code = -ER$ARGS     ;* Preset for argument errors
 
-
-   if not(kernel(K$ADMINISTRATOR,-1)) then
+* 20240330 mab permission to use verb is restricted to root (system(27) = 0)
+   if system(27) > 0 then
       stop sysmsg(2001) ;* Command requires administrator privileges
    end
 
@@ -82,15 +83,15 @@ $include err.h
       if lgn.id[1,1] = '$' then continue  ;* Ignore system records
 
       if not(user.reported) then
-         display sysmsg(6060)  ;* User name.......................  Login account...  Last login.....  Admin
+         display sysmsg(6060)  ;* User name.......................  Last account...  Last login.....  
          user.reported = @true
       end
 
       s = fmt(lgn.id, '32L') : '  '
       read lgn.rec from lgn.f, lgn.id then
-         s := fmt(lgn.rec<LGN$FORCE.ACCOUNT>, '16L') : '  '
+         s := fmt(lgn.rec<LGN$LAST.ACCOUNT>, '16L') : '  '
          s := fmt(oconv(lgn.rec<LGN$DATE>, 'D2 DMYL[,A3]') : ' ' : oconv(lgn.rec<LGN$TIME>, 'MT'), '15L') : '   '
-         s := sysmsg(if lgn.rec<LGN$ADMIN> then 2057 else 2058)  ;* Yes / No
+        * s := sysmsg(if lgn.rec<LGN$ADMIN> then 2057 else 2058)  ;* Yes / No
          display trimb(s)
       end else
          display '????'
